# cookbook-data-viz-plotly

./: .gitignore  README.md  app.py  cookbook-data-viz-ploltly.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.sh
notebooks/: cookbook-data-viz-ploltly.ipynb
src/: cookbook-data-viz-ploltly.ipynb
src/data_util/: data.py
src/data_util_streamlit/: scatter_adv.py  selection.py
src/format_color_util_plotly/: colors.py
src/format_color_util_streamlit/: color_scale.py
src/format_util_plotly/: axes.py  legend_scale.py  title.py
src/format_util_streamlit/: axes.py  title_legend_intercept.py
src/plot_util_plotly/: boxplot.py  scatterplot.py
src/plot_util_streamlit/: boxplot.py  boxplot_adv.py  boxplot_basic.py  scatterplot.py  scatterplot_adv.py  scatterplot_basic.py
viz_utils/: axes.py  background.py  legend.py  title.py
