[metadata]
name = cookbook-data-viz-plotly
version = 0.0.1
author = Paul Kiage
author_email = paul.r.kiage@gmail.com
description = Explore plotly scatter plot and box plot
long_description = file: README.md
url = https://github.com/pkiage/cookbook-data-viz-plotly
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src